objects/Optima_Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <inlineHelpText>The first day of support covered by the payment (or first day after the support period for invoices in arrears). The invoice is issued in the previous month or earlier, depending on the contract payment terms)</inlineHelpText>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoiced__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether the invoice has been issued. This will be automatically set when the invoice number is filled in</inlineHelpText>
        <label>Invoiced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issue_date__c</fullName>
        <formula>Invoice_Date__c  -   Master_Contract__r.Payment_terms__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The date the invoice should be issued, based on the contract's payment terms</inlineHelpText>
        <label>Issue date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Master_Contract__c</fullName>
        <label>Master Contract</label>
        <referenceTo>IMX_Contract__c</referenceTo>
        <relationshipLabel>Optima Invoices</relationshipLabel>
        <relationshipName>Optima_Invoices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Optima_Invoice_Legacy_ID__c</fullName>
        <label>Optima Invoice Legacy ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Optima Invoice</label>
    <nameField>
        <displayFormat>INV-{000000}</displayFormat>
        <label>Invoice Link</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Optima Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Invoice_num_reqd_when_issued</fullName>
        <active>true</active>
        <errorConditionFormula>and( Invoiced__c = TRUE,  ISBLANK( Invoice_Number__c ) )</errorConditionFormula>
        <errorDisplayField>Invoice_Number__c</errorDisplayField>
        <errorMessage>Invoice number must be entered when the invoice has been issued</errorMessage>
    </validationRules>
</CustomObject>